--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "marked": "^1.1.0",
     "node-fetch": "^2.6.0",
     "polka": "next",
+    "prismjs": "^1.20.0",
     "sirv": "^0.4.0"
   },
   "devDependencies": {
